[package]
name = 'datahighway-parachain-runtime'
version = '3.6.1'
authors = ['MXC Foundation GmbH <https://t.me/mxcfoundation>', 'Luke Schoen <luke@mxc.org>', 'Ilya Beregovskiy <ilya@mxc.org>']
license = 'GPL-3'
homepage = 'http://www.datahighway.com/'
repository = 'https://github.com/DataHighway-DHX/DataHighway-Parachain'
edition = '2021'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

[dependencies]
chrono = { version = '0.4.19', default_features = false }
funty = { default-features = false, version = '=1.1.0' }
hex-literal = { version = '0.3.4', optional = true }
codec = { version = '3.1.2', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
log = { version = '0.4.14', default-features = false }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
serde = { version = '1.0.136', optional = true, features = ['derive'] }
smallvec = '1.8.0'
static_assertions = '1.1.0'

# Local
module-primitives = { default-features = false, path = '../pallets/primitives' }

# Substrate
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', optional = true }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', optional = true }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-bounties = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-child-bounties = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-conviction-voting = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-elections-phragmen = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-identity = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-indices = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-membership = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-multisig = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-preimage = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-referenda = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-recovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-tips = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-asset-tx-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

# Polkadot
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v0.9.24' }

# Cumulus
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24',  default-features = false, version = '3.0.0'}
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.24', default-features = false }

[features]
default = [
    'std',
]
std = [
    'chrono/std',
    'codec/std',
    'log/std',
    'scale-info/std',
    'serde',
    'cumulus-pallet-aura-ext/std',
    'cumulus-pallet-dmp-queue/std',
    'cumulus-pallet-parachain-system/std',
    'cumulus-pallet-xcm/std',
    'cumulus-pallet-xcmp-queue/std',
    'cumulus-primitives-core/std',
    'cumulus-primitives-timestamp/std',
    'cumulus-primitives-utility/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-benchmarking/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-try-runtime/std',
    'pallet-aura/std',
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-child-bounties/std',
    'pallet-collator-selection/std',
    'pallet-collective/std',
    'pallet-conviction-voting/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'pallet-identity/std',
    'pallet-indices/std',
    'pallet-membership/std',
    'pallet-multisig/std',
    'pallet-preimage/std',
    'pallet-proxy/std',
    'pallet-randomness-collective-flip/std',
    'pallet-recovery/std',
    'pallet-referenda/std',
    'pallet-session/std',
    'pallet-scheduler/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-tips/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-asset-tx-payment/std',
    'pallet-treasury/std',
    'pallet-utility/std',
    'pallet-xcm/std',
    'parachain-info/std',
    'polkadot-parachain/std',
    'polkadot-runtime-common/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'xcm-builder/std',
    'xcm-executor/std',
    'xcm/std',
]

runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking/runtime-benchmarks', # must be provided
    'frame-system-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-bounties/runtime-benchmarks',
    'pallet-child-bounties/runtime-benchmarks',
    'pallet-collator-selection/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-conviction-voting/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-elections-phragmen/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
    'pallet-indices/runtime-benchmarks',
    'pallet-membership/runtime-benchmarks',
    'pallet-multisig/runtime-benchmarks',
    'pallet-preimage/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-referenda/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-tips/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-xcm/runtime-benchmarks',
    'polkadot-runtime-common/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'xcm-builder/runtime-benchmarks',
    'cumulus-pallet-session-benchmarking/runtime-benchmarks',
]

try-runtime = [
    'frame-executive/try-runtime',
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'frame-try-runtime',
    'pallet-balances/try-runtime',
    'pallet-bounties/try-runtime',
    'pallet-child-bounties/try-runtime',
    'pallet-collator-selection/try-runtime',
    'pallet-collective/try-runtime',
    'pallet-conviction-voting/try-runtime',
    'pallet-democracy/try-runtime',
    'pallet-elections-phragmen/try-runtime',
    'pallet-identity/try-runtime',
    'pallet-indices/try-runtime',
    'pallet-membership/try-runtime',
    'pallet-multisig/try-runtime',
    'pallet-preimage/try-runtime',
    'pallet-proxy/try-runtime',
    'pallet-referenda/try-runtime',
    'pallet-scheduler/try-runtime',
    'pallet-timestamp/try-runtime',
    'pallet-tips/try-runtime',
    'pallet-treasury/try-runtime',
    'pallet-utility/try-runtime',
]
